--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,10 @@ h2 {
 }
 footer {
   text-align: center;
-  font-size: 18px;
+  font-size: 15px;
   color: rgba(0, 0, 0, 0.7);
+}
+footer a {
+  font-weight: bold;
+  color: #9f7df3;
 }
